--- a/deployment-manager/gcs.yml
+++ b/deployment-manager/gcs.yml
@@ -2,14 +2,8 @@ resources:
   - name: iac-project-terraform-backend-sandbox-hateen0808
     type: storage.v1.bucket
     properties:
-      location: "asia-northeast1"
+      location: "ASIA1"
       locationType: "dual-region"
       storageClass: "STANDARD"
       versioning:
         enabled: true
-      lifecycle:
-        rule:
-          - action:
-              type: Delete
-            condition:
-              age: 365
