--- a/.github/workflows/ plan.yml
+++ b/.github/workflows/ plan.yml
@@ -23,7 +23,6 @@ jobs:
 
       - uses: "google-github-actions/auth@v2"
         with:
-          project_id: ${{ secrets.PROJECT_ID }}
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
 
       - uses: hashicorp/setup-terraform@v3
@@ -38,4 +37,4 @@ jobs:
 
       - name: Terragrunt init
         working-directory: ${{ env.working_dir }}
-        run: terragrunt run-all init
+        run: terragrunt init
